--- a/about-Phone.css
+++ b/about-Phone.css
@@ -11,7 +11,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     height: 20px;
-    width: 390px;
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -49,7 +49,7 @@ nav li {
     background-color: darkgray;
 }
 .main-image img{
-    width: 390px;
+    width: 100%;
     height: 100px;
     position: relative;
       top: 20px;
