--- a/assets-contact/css/contact.css
+++ b/assets-contact/css/contact.css
@@ -1,160 +1,91 @@
 body {
 	line-height: 1;
-	margin: 0;
+	margin: 0
 }
-/* Image */
+
 h2 {
 	font-size: 2.85em;
 	font-weight: 400;
-    color: #000000;
-    line-height: 1.25em;
+	color: #000;
+	line-height: 1.25em
 }
-
-.image {
-	position: relative;
-	display: inline-block;
-	border: 0;
-	outline: 0;
-}
-
-	.image img {
-		display: block;
-		width: 100%;
-	}
-
-	.image.fit {
-		display: block;
-		width: 100%;
-	}
-
-	.image.featured {
-		display: block;
-		width: 100%;
-		margin: 0 0 4em 0;
-	}
-
-	.image.left {
-		float: left;
-		margin: 0 2em 2em 0;
-	}
-
-	.image.centered {
-		display: block;
-		margin: 0 0 2em 0;
-	}
-
-		.image.centered img {
-			margin: 0 auto;
-			width: auto;
-		}
-/* Wrapper */
 
 .wrapper {
 	background: #fff;
 	margin: 0 0 2em 0;
-	padding: 6em 0 6em 0;
+	padding: 6em 0 6em 0
 }
-
-	.wrapper.style2 {
-		padding-top: 0;
-	}
-
-/* Header */
 
 #header {
 	position: relative;
-	background-image: url("../../images/header.jpg");
+	background-image: url(https://ballo-02.github.io/images/header.jpg);
 	background-size: cover;
 	background-position: center center;
 	background-attachment: fixed;
 	color: #fff;
 	text-align: center;
 	padding: 7.5em 0 2em 0;
-	cursor: default;
+	cursor: default
 }
 
-	#header:before {
-		content: '';
-		display: inline-block;
-		vertical-align: middle;
-		height: 100%;
-	}
+#header:before {
+	content: '';
+	display: inline-block;
+	vertical-align: middle;
+	height: 100%
+}
 
-	#header .inner {
-		position: relative;
-		z-index: 1;
-		margin: 0;
-		display: inline-block;
-		vertical-align: middle;
-	}
+#header header {
+	display: inline-block
+}
 
-	#header header {
-		display: inline-block;
-	}
+#header header>p {
+	font-size: 1.25em;
+	margin: 0
+}
 
-		#header header > p {
-			font-size: 1.25em;
-			margin: 0;
-		}
+#header h1 {
+	color: #fff;
+	font-size: 3em;
+	line-height: 1em
+}
 
-	#header h1 {
-		color: #fff;
-		font-size: 3em;
-		line-height: 1em;
-	}
-
-		#header h1 a {
-			color: inherit;
-		}
-
-
-	#header hr {
-		top: 1.5em;
-		margin-bottom: 3em;
-		border-bottom-color: rgba(192, 192, 192, 0.35);
-		box-shadow: inset 0 1px 0 0 rgba(192, 192, 192, 0.35);
-	}
-
-		#header hr:before, #header hr:after {
-			background: rgba(192, 192, 192, 0.35);
-		}
-
-	
+#header h1 a {
+	color: inherit
+}
 
 body.homepage #header {
 	height: 100vh;
-	min-height: 40em;
+	min-height: 40em
 }
 
-	body.homepage #header h1 {
-		font-size: 4em;
-	}
+body.homepage #header h1 {
+	font-size: 4em
+}
 
-	body.homepage #header:after {
-		content: '';
-		background: #1C0920;
-		display: block;
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		opacity: 0;
-		-moz-transition: opacity 2.5s ease-in-out;
-		-webkit-transition: opacity 2.5s ease-in-out;
-		-ms-transition: opacity 2.5s ease-in-out;
-		transition: opacity 2.5s ease-in-out;
-		-moz-transition-delay: 0.5s;
-		-webkit-transition-delay: 0.5s;
-		-ms-transition-delay: 0.5s;
-		transition-delay: 0.5s;
-	}
+body.homepage #header:after {
+	content: '';
+	background: #1c0920;
+	display: block;
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	-moz-transition: opacity 2.5s ease-in-out;
+	-webkit-transition: opacity 2.5s ease-in-out;
+	-ms-transition: opacity 2.5s ease-in-out;
+	transition: opacity 2.5s ease-in-out;
+	-moz-transition-delay: .5s;
+	-webkit-transition-delay: .5s;
+	-ms-transition-delay: .5s;
+	transition-delay: .5s
+}
 
 body.homepage.is-preload #header:after {
-	opacity: 1;
+	opacity: 1
 }
-
-/* Nav */
 
 #nav {
 	color: #fff;
@@ -162,195 +93,158 @@ body.homepage.is-preload #header:after {
 	top: 0;
 	left: 0;
 	width: 100%;
-	font-weight: bold;
+	font-weight: 700;
 	text-align: center;
 	font-family: 'Sans Pro', sans-serif;
 	padding: 1.5em 0 1.5em 0;
 	z-index: 1;
-	overflow: hidden;
+	overflow: hidden
 }
 
-	#nav > ul {
-		line-height: 0px;
-		position: relative;
-		display: inline-block;
-		margin: 0;
-		height: 21px;
-		border-left: solid 1px rgba(192, 192, 192, 0.35);
-		border-right: solid 1px rgba(192, 192, 192, 0.35);
-	}
+#nav>ul {
+	line-height: 0;
+	position: relative;
+	display: inline-block;
+	margin: 0;
+	height: 21px;
+	border-left: solid 1px rgba(192, 192, 192, .35);
+	border-right: solid 1px rgba(192, 192, 192, .35)
+}
 
-		#nav > ul:before, #nav > ul:after {
-			content: '';
-			display: block;
-			width: 300%;
-			position: absolute;
-			top: 50%;
-			margin-top: -2px;
-			height: 5px;
-			border-top: solid 1px rgba(192, 192, 192, 0.35);
-			border-bottom: solid 1px rgba(192, 192, 192, 0.35);
-		}
+#nav>ul:after,
+#nav>ul:before {
+	content: '';
+	display: block;
+	width: 300%;
+	position: absolute;
+	top: 50%;
+	margin-top: -2px;
+	height: 5px;
+	border-top: solid 1px rgba(192, 192, 192, .35);
+	border-bottom: solid 1px rgba(192, 192, 192, .35)
+}
 
-		#nav > ul:before {
-			left: 100%;
-			margin-left: 1px;
-		}
+#nav>ul:before {
+	left: 100%;
+	margin-left: 1px
+}
 
-		#nav > ul:after {
-			right: 100%;
-			margin-right: 1px;
-		}
+#nav>ul:after {
+	right: 100%;
+	margin-right: 1px
+}
 
-		#nav > ul > li {
-			display: inline-block;
-			margin: -9px 0.5em 0 0.5em;
-			border-radius: 0.5em;
-			padding: 0.85em;
-			border: solid 1px transparent;
-			-moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-			-webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-			-ms-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-			transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-		}
+#nav>ul>li {
+	display: inline-block;
+	margin: -9px .5em 0 .5em;
+	border-radius: .5em;
+	padding: .85em;
+	border: solid 1px transparent;
+	-moz-transition: color .35s ease-in-out, border-color .35s ease-in-out;
+	-webkit-transition: color .35s ease-in-out, border-color .35s ease-in-out;
+	-ms-transition: color .35s ease-in-out, border-color .35s ease-in-out;
+	transition: color .35s ease-in-out, border-color .35s ease-in-out
+}
 
-			#nav > ul > li.active {
-				border-color: rgba(192, 192, 192, 0.35);
-			}
+#nav>ul>li>a {
+	display: block;
+	color: inherit;
+	text-decoration: none;
+	border: 0;
+	outline: 0
+}
 
-			#nav > ul > li > a, #nav > ul > li > span {
-				display: block;
-				color: inherit;
-				text-decoration: none;
-				border: 0;
-				outline: 0;
-			}
-
-			#nav > ul > li > ul {
-				display: none;
-			}
+#nav>ul>li>ul {
+	display: none
+}
 
 .dropotron {
-	background: rgba(255, 255, 255, 0.975);
+	background: rgba(255, 255, 255, .975);
 	padding: 1em 1.25em 1em 1.25em;
 	line-height: 1em;
 	height: auto;
 	text-align: left;
-	border-radius: 0.5em;
-	box-shadow: 0 0.15em 0.25em 0 rgba(0, 0, 0, 0.25);
+	border-radius: .5em;
+	box-shadow: 0 .15em .25em 0 rgba(0, 0, 0, .25);
 	min-width: 12em;
 	margin-top: -1em;
-	list-style: none;
+	list-style: none
 }
 
-	.dropotron li {
-		border-top: solid 1px rgba(128, 128, 128, 0.2);
-		color: #5b5b5b;
-		padding-left: 0;
-	}
+.dropotron li {
+	border-top: solid 1px rgba(128, 128, 128, .2);
+	color: #5b5b5b;
+	padding-left: 0
+}
 
-		.dropotron li:first-child {
-			border-top: 0;
-		}
+.dropotron li:first-child {
+	border-top: 0
+}
 
-		.dropotron li:hover {
-			color: #ef8376;
-		}
+.dropotron li:hover {
+	color: #ef8376
+}
 
-		.dropotron li a, .dropotron li span {
-			display: block;
-			border: 0;
-			padding: 0.5em 0 0.5em 0;
-			-moz-transition: color 0.35s ease-in-out;
-			-webkit-transition: color 0.35s ease-in-out;
-			-ms-transition: color 0.35s ease-in-out;
-			transition: color 0.35s ease-in-out;
-		}
-
-	.dropotron.level-0 {
-		margin-top: 2em;
-		font-size: 0.9em;
-	}
-
-		.dropotron.level-0:before {
-			content: '';
-			position: absolute;
-			left: 50%;
-			top: -0.7em;
-			margin-left: -0.75em;
-			border-bottom: solid 0.75em rgba(255, 255, 255, 0.975);
-			border-left: solid 0.75em rgba(64, 64, 64, 0);
-			border-right: solid 0.75em rgba(64, 64, 64, 0);
-		}
-/* Banner */
+.dropotron li a {
+	display: block;
+	border: 0;
+	padding: .5em 0 .5em 0;
+	-moz-transition: color .35s ease-in-out;
+	-webkit-transition: color .35s ease-in-out;
+	-ms-transition: color .35s ease-in-out;
+	transition: color .35s ease-in-out
+}
 
 #banner {
 	background: #fff;
 	color: #fff;
-	background-image: url("../../images/header.png");
+	background-image: url(https://ballo-02.github.io/images/header.png);
 	text-align: center;
 	padding: 4.5em 0 4.5em 0;
-	margin-bottom: 0;
+	margin-bottom: 0
 }
 
-	#banner header > p {
-		margin-bottom: 0;
-		display: block;
-		font-size: 1.5em;
-		margin: 1em 0 2em 0;
-		line-height: 1.5em;
-		text-align: inherit;
-	}
-/* Banner 2*/
+#banner header>p {
+	margin-bottom: 0;
+	display: block;
+	font-size: 1.5em;
+	margin: 1em 0 2em 0;
+	line-height: 1.5em;
+	text-align: inherit
+}
 
 #banner2 {
-background: #fff;
-color: #000000;
-text-align: center;
-padding: 4.5em 0 4.5em 0;
-margin-bottom: 0;
+	background: #fff;
+	color: #000;
+	text-align: center;
+	padding: 4.5em 0 4.5em 0;
+	margin-bottom: 0
 }
 
-#banner2 header2 > p {
+#banner2 header2>p {
 	margin-bottom: 0;
-margin-bottom: 0;
+	margin-bottom: 0
 }
 
-/* Content */
-
-#content > hr {
-	top: 3em;
-	margin-bottom: 6em;
+#content>section {
+	margin-bottom: 0
 }
 
-#content > section {
-	margin-bottom: 0;
-}
-/* XLarge */
-
-@media screen and (max-width: 1680px) {
-
-	/* Basic */
-
-		body, input, select, textarea {
-			font-size: 12pt;
-		}
-
+@media screen and (max-width:1680px) {
+	body,
+	input,
+	textarea {
+		font-size: 12pt
+	}
 }
 
-/* Large */
-
-@media screen and (max-width: 1280px) {
-
-	/* Basic */
-
-		body, input, select, textarea {
-			font-size: 11pt;
-		}
-
+@media screen and (max-width:1280px) {
+	body,
+	input,
+	textarea {
+		font-size: 11pt
+	}
 }
-
-/* Medium */
 
 #navPanel, #navToggle {
 	display: none;
@@ -359,162 +253,145 @@ margin-bottom: 0;
 }
 
 #fcf-form {
-    display:block;
+	display: block
 }
 
 .fcf-body {
-    margin: 0;
-    font-family: -apple-system, Arial, sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-    padding: 30px;
-    padding-bottom: 10px;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    max-width: 100%;
+	margin: 0;
+	font-family: -apple-system, Arial, sans-serif;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #212529;
+	text-align: left;
+	background-color: #fff;
+	padding: 30px;
+	padding-bottom: 10px;
+	border: 1px solid #ced4da;
+	border-radius: .25rem;
+	max-width: 100%
 }
 
 .fcf-form-group {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem
 }
 
 .fcf-input-group {
-    position: relative;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-align: stretch;
-    align-items: stretch;
-    width: 100%;
+	position: relative;
+	display: -ms-flexbox;
+	display: flex;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
+	-ms-flex-align: stretch;
+	align-items: stretch;
+	width: 100%
 }
 
 .fcf-form-control {
-    display: block;
-    width: 100%;
-    height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    outline: none;
-    border-radius: 0.25rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	display: block;
+	width: 100%;
+	height: calc(1.5em+ .75rem+ 2px);
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	font-weight: 400;
+	line-height: 1.5;
+	color: #495057;
+	background-color: #fff;
+	background-clip: padding-box;
+	border: 1px solid #ced4da;
+	outline: 0;
+	border-radius: .25rem;
+	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
 }
 
 .fcf-form-control:focus {
-    border: 1px solid #313131;
-}
-
-select.fcf-form-control[size], select.fcf-form-control[multiple] {
-    height: auto;
+	border: 1px solid #313131
 }
 
 textarea.fcf-form-control {
-    font-family: -apple-system, Arial, sans-serif;
-    height: auto;
+	font-family: -apple-system, Arial, sans-serif;
+	height: auto
 }
 
 label.fcf-label {
-    display: inline-block;
-    margin-bottom: 0.5rem;
-}
-
-.fcf-credit {
-    padding-top: 10px;
-    font-size: 0.9rem;
-    color: #545b62;
-}
-
-.fcf-credit a {
-    color: #545b62;
-    text-decoration: underline;
-}
-
-.fcf-credit a:hover {
-    color: #0056b3;
-    text-decoration: underline;
+	display: inline-block;
+	margin-bottom: .5rem
 }
 
 .fcf-btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	display: inline-block;
+	font-weight: 400;
+	color: #212529;
+	text-align: center;
+	vertical-align: middle;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-color: transparent;
+	border: 1px solid transparent;
+	padding: .375rem .75rem;
+	font-size: 1rem;
+	line-height: 1.5;
+	border-radius: .25rem;
+	transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
 }
 
-@media (prefers-reduced-motion: reduce) {
-    .fcf-btn {
-        transition: none;
-    }
+@media (prefers-reduced-motion:reduce) {
+	.fcf-btn {
+		transition: none
+	}
 }
 
 .fcf-btn:hover {
-    color: #212529;
-    text-decoration: none;
+	color: #212529;
+	text-decoration: none
 }
 
-.fcf-btn:focus, .fcf-btn.focus {
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+.fcf-btn:focus {
+	outline: 0;
+	box-shadow: 0 0 0 .2rem rgba(0, 123, 255, .25)
 }
 
 .fcf-btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+	color: #fff;
+	background-color: #007bff;
+	border-color: #007bff
 }
 
 .fcf-btn-primary:hover {
-    color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
+	color: #fff;
+	background-color: #0069d9;
+	border-color: #0062cc
 }
 
-.fcf-btn-primary:focus, .fcf-btn-primary.focus {
-    color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
-    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
+.fcf-btn-primary:focus {
+	color: #fff;
+	background-color: #0069d9;
+	border-color: #0062cc;
+	box-shadow: 0 0 0 .2rem rgba(38, 143, 255, .5)
 }
 
-.fcf-btn-lg, .fcf-btn-group-lg>.fcf-btn {
-    padding: 0.5rem 1rem;
-    font-size: 1.25rem;
-    line-height: 1.5;
-    border-radius: 0.3rem;
+.fcf-btn-group-lg>.fcf-btn,
+.fcf-btn-lg {
+	padding: .5rem 1rem;
+	font-size: 1.25rem;
+	line-height: 1.5;
+	border-radius: .3rem
 }
 
 .fcf-btn-block {
-    display: block;
-    width: 100%;
+	display: block;
+	width: 100%
 }
 
 .fcf-btn-block+.fcf-btn-block {
-    margin-top: 0.5rem;
+	margin-top: .5rem
 }
 
-input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[type="button"].fcf-btn-block {
-    width: 100%;
+input[type=button].fcf-btn-block,
+input[type=reset].fcf-btn-block,
+input[type=submit].fcf-btn-block {
+	width: 100%
 }
